lib/dcimgui/dcimgui.h


typedef struct ImVec2_t ImVec2;
typedef struct ImVec4_t ImVec4;
typedef struct ImTextureRef_t ImTextureRef;
typedef unsigned int ImGuiID;      
typedef unsigned int ImU32;        
typedef struct ImDrawData_t ImDrawData;                              
typedef struct ImDrawList_t ImDrawList;                              
typedef struct ImFont_t ImFont;                                      
typedef struct ImFontAtlas_t ImFontAtlas;                            
typedef struct ImFontBaked_t ImFontBaked;                            
typedef struct ImGuiContext_t ImGuiContext;                                    
typedef struct ImGuiIO_t ImGuiIO;                                              
typedef struct ImGuiPlatformIO_t ImGuiPlatformIO;                              
typedef struct ImGuiStyle_t ImGuiStyle;                                        
typedef struct ImGuiViewport_t ImGuiViewport;                                  
typedef int ImGuiCol;             
typedef int ImGuiCond;            
typedef int ImGuiStyleVar;        
typedef int ImGuiChildFlags;        
typedef int ImGuiFocusedFlags;      
typedef int ImGuiHoveredFlags;      
typedef int ImGuiWindowFlags;       
typedef void (*ImGuiSizeCallback)(ImGuiSizeCallbackData* data);           
struct ImVec4_t
{
    float x, y, z, w;
};
typedef ImU64 ImTextureID;  
CIMGUI_API ImTextureID ImTextureRef_GetTexID(const ImTextureRef* self);  
IM_MSVC_RUNTIME_CHECKS_RESTORE
CIMGUI_API ImGuiContext* ImGui_CreateContext(ImFontAtlas* shared_font_atlas );
CIMGUI_API void          ImGui_DestroyContext(ImGuiContext* ctx );  
CIMGUI_API ImGuiContext* ImGui_GetCurrentContext(void);
CIMGUI_API void          ImGui_SetCurrentContext(ImGuiContext* ctx);
CIMGUI_API ImGuiIO*         ImGui_GetIO(void);          
CIMGUI_API ImGuiPlatformIO* ImGui_GetPlatformIO(void);  
CIMGUI_API ImGuiStyle*      ImGui_GetStyle(void);       
CIMGUI_API void             ImGui_NewFrame(void);       
CIMGUI_API void             ImGui_EndFrame(void);       
CIMGUI_API void             ImGui_Render(void);         
CIMGUI_API ImDrawData*      ImGui_GetDrawData(void);    
CIMGUI_API void        ImGui_ShowDemoWindow(bool* p_open );           
CIMGUI_API void        ImGui_ShowMetricsWindow(bool* p_open );        
CIMGUI_API void        ImGui_ShowDebugLogWindow(bool* p_open );       
CIMGUI_API void        ImGui_ShowIDStackToolWindow(void);                         
CIMGUI_API void        ImGui_ShowIDStackToolWindowEx(bool* p_open );  
CIMGUI_API void        ImGui_ShowAboutWindow(bool* p_open );          
CIMGUI_API void        ImGui_ShowStyleEditor(ImGuiStyle* ref );       
CIMGUI_API bool        ImGui_ShowStyleSelector(const char* label);                
CIMGUI_API void        ImGui_ShowFontSelector(const char* label);                 
CIMGUI_API void        ImGui_ShowUserGuide(void);                                 
CIMGUI_API const char* ImGui_GetVersion(void);                                    
CIMGUI_API void ImGui_StyleColorsDark(ImGuiStyle* dst );     
CIMGUI_API void ImGui_StyleColorsLight(ImGuiStyle* dst );    
CIMGUI_API void ImGui_StyleColorsClassic(ImGuiStyle* dst );  
CIMGUI_API bool ImGui_Begin(const char* name, bool* p_open , ImGuiWindowFlags flags );
CIMGUI_API void ImGui_End(void);
CIMGUI_API bool ImGui_BeginChild(const char* str_id, ImVec2 size , ImGuiChildFlags child_flags , ImGuiWindowFlags window_flags );
CIMGUI_API bool ImGui_BeginChildID(ImGuiID id, ImVec2 size , ImGuiChildFlags child_flags , ImGuiWindowFlags window_flags );
CIMGUI_API void ImGui_EndChild(void);
CIMGUI_API bool           ImGui_IsWindowAppearing(void);
CIMGUI_API bool           ImGui_IsWindowCollapsed(void);
CIMGUI_API bool           ImGui_IsWindowFocused(ImGuiFocusedFlags flags );  
CIMGUI_API bool           ImGui_IsWindowHovered(ImGuiHoveredFlags flags );  
ui or my application?" for details.
CIMGUI_API ImDrawList*    ImGui_GetWindowDrawList(void);                             
CIMGUI_API float          ImGui_GetWindowDpiScale(void);                             
CIMGUI_API ImVec2         ImGui_GetWindowPos(void);                                  
CIMGUI_API ImVec2         ImGui_GetWindowSize(void);                                 
CIMGUI_API float          ImGui_GetWindowWidth(void);                                
CIMGUI_API float          ImGui_GetWindowHeight(void);                               
CIMGUI_API ImGuiViewport* ImGui_GetWindowViewport(void);                             
CIMGUI_API void ImGui_SetNextWindowPos(ImVec2 pos, ImGuiCond cond );                                       
CIMGUI_API void ImGui_SetNextWindowPosEx(ImVec2 pos, ImGuiCond cond , ImVec2 pivot );  
CIMGUI_API void ImGui_SetNextWindowSize(ImVec2 size, ImGuiCond cond );                                     
CIMGUI_API void ImGui_SetNextWindowSizeConstraints(ImVec2 size_min, ImVec2 size_max, ImGuiSizeCallback custom_callback , void* custom_callback_data ); 
CIMGUI_API void ImGui_SetNextWindowContentSize(ImVec2 size);                                                        
CIMGUI_API void ImGui_SetNextWindowCollapsed(bool collapsed, ImGuiCond cond );                             
CIMGUI_API void ImGui_SetNextWindowFocus(void);                                                                     
CIMGUI_API void ImGui_SetNextWindowScroll(ImVec2 scroll);                                                           
CIMGUI_API void ImGui_SetNextWindowBgAlpha(float alpha);                                                            
CIMGUI_API void ImGui_SetNextWindowViewport(ImGuiID viewport_id);                                                   
CIMGUI_API void ImGui_SetWindowPos(ImVec2 pos, ImGuiCond cond );                                           
CIMGUI_API void ImGui_SetWindowSize(ImVec2 size, ImGuiCond cond );                                         
CIMGUI_API void ImGui_SetWindowCollapsed(bool collapsed, ImGuiCond cond );                                 
CIMGUI_API void ImGui_SetWindowFocus(void);                                                                         
CIMGUI_API void ImGui_SetWindowPosStr(const char* name, ImVec2 pos, ImGuiCond cond );                      
CIMGUI_API void ImGui_SetWindowSizeStr(const char* name, ImVec2 size, ImGuiCond cond );                    
CIMGUI_API void ImGui_SetWindowCollapsedStr(const char* name, bool collapsed, ImGuiCond cond );            
CIMGUI_API void ImGui_SetWindowFocusStr(const char* name);                                                          
CIMGUI_API float ImGui_GetScrollX(void);                                                     
CIMGUI_API float ImGui_GetScrollY(void);                                                     
CIMGUI_API void  ImGui_SetScrollX(float scroll_x);                                           
CIMGUI_API void  ImGui_SetScrollY(float scroll_y);                                           
CIMGUI_API float ImGui_GetScrollMaxX(void);                                                  
CIMGUI_API float ImGui_GetScrollMaxY(void);                                                  
CIMGUI_API void  ImGui_SetScrollHereX(float center_x_ratio );                    
CIMGUI_API void  ImGui_SetScrollHereY(float center_y_ratio );                    
CIMGUI_API void  ImGui_SetScrollFromPosX(float local_x, float center_x_ratio );  
CIMGUI_API void  ImGui_SetScrollFromPosY(float local_y, float center_y_ratio );  
CIMGUI_API void         ImGui_PushFontFloat(ImFont* font, float font_size_base_unscaled);  
CIMGUI_API void         ImGui_PopFont(void);
CIMGUI_API ImFont*      ImGui_GetFont(void);                                               
CIMGUI_API float        ImGui_GetFontSize(void);                                           
CIMGUI_API ImFontBaked* ImGui_GetFontBaked(void);                                          
CIMGUI_API void ImGui_PushStyleColor(ImGuiCol idx, ImU32 col);            
CIMGUI_API void ImGui_PushStyleColorImVec4(ImGuiCol idx, ImVec4 col);
CIMGUI_API void ImGui_PopStyleColor(void);                                
CIMGUI_API void ImGui_PopStyleColorEx(int count );
CIMGUI_API void ImGui_PushStyleVar(ImGuiStyleVar idx, float val);         
CIMGUI_API void ImGui_PushStyleVarImVec2(ImGuiStyleVar idx, ImVec2 val);  
CIMGUI_API void ImGui_PushStyleVarX(ImGuiStyleVar idx, float val_x);      
CIMGUI_API void ImGui_PlotLinesCallback(const char* label, float (*values_getter)(void* data, int idx), void* data, int values_count);      
CIMGUI_API void ImGui_PlotLinesCallbackEx(const char* label, float (*values_getter)(void* data, int idx), void* data, int values_count, int values_offset , const char* overlay_text , float scale_min , float scale_max , ImVec2 graph_size );
CIMGUI_API void ImGui_PlotHistogramCallback(const char* label, float (*values_getter)(void* data, int idx), void* data, int values_count);  
CIMGUI_API void ImGui_PlotHistogramCallbackEx(const char* label, float (*values_getter)(void* data, int idx), void* data, int values_count, int values_offset , const char* overlay_text , float scale_min , float scale_max , ImVec2 graph_size );
CIMGUI_API void ImGuiPlatformIO_SetPlatform_GetWindowWorkAreaInsets(void (*getWindowWorkAreaInsetsFunc)(ImGuiViewport* vp, ImVec4* result));  
CIMGUI_API void ImGuiPlatformIO_SetPlatform_GetWindowFramebufferScale(void (*getWindowFramebufferScaleFunc)(ImGuiViewport* vp, ImVec2* result));  
CIMGUI_API void ImGuiPlatformIO_SetPlatform_GetWindowPos(void (*getWindowPosFunc)(ImGuiViewport* vp, ImVec2* result));    
CIMGUI_API void ImGuiPlatformIO_SetPlatform_GetWindowSize(void (*getWindowSizeFunc)(ImGuiViewport* vp, ImVec2* result));  