src/imguics/DCImGui.cs


    [DllImport(LIB, CallingConvention = CallingConvention.Cdecl)]
    public static extern ulong ImTextureRef_GetTexID(System.IntPtr self);
    [DllImport(LIB, CallingConvention = CallingConvention.Cdecl)]
    public static extern System.IntPtr ImGui_CreateContext(System.IntPtr shared_font_atlas);
    [DllImport(LIB, CallingConvention = CallingConvention.Cdecl)]
    public static extern void ImGui_DestroyContext(System.IntPtr ctx);
    [DllImport(LIB, CallingConvention = CallingConvention.Cdecl)]
    public static extern System.IntPtr ImGui_GetCurrentContext();
    [DllImport(LIB, CallingConvention = CallingConvention.Cdecl)]
    public static extern void ImGui_SetCurrentContext(System.IntPtr ctx);
    [DllImport(LIB, CallingConvention = CallingConvention.Cdecl)]
    public static extern System.IntPtr ImGui_GetIO();
    [DllImport(LIB, CallingConvention = CallingConvention.Cdecl)]
    public static extern System.IntPtr ImGui_GetPlatformIO();
    [DllImport(LIB, CallingConvention = CallingConvention.Cdecl)]
    public static extern System.IntPtr ImGui_GetStyle();
    [DllImport(LIB, CallingConvention = CallingConvention.Cdecl)]
    public static extern void ImGui_NewFrame();
    [DllImport(LIB, CallingConvention = CallingConvention.Cdecl)]
    public static extern void ImGui_EndFrame();
    [DllImport(LIB, CallingConvention = CallingConvention.Cdecl)]
    public static extern void ImGui_Render();
    [DllImport(LIB, CallingConvention = CallingConvention.Cdecl)]
    public static extern System.IntPtr ImGui_GetDrawData();
    [DllImport(LIB, CallingConvention = CallingConvention.Cdecl)]
    public static extern void ImGui_ShowDemoWindow(System.IntPtr p_open);
    [DllImport(LIB, CallingConvention = CallingConvention.Cdecl)]
    public static extern void ImGui_ShowMetricsWindow(System.IntPtr p_open);
    [DllImport(LIB, CallingConvention = CallingConvention.Cdecl)]
    public static extern void ImGui_ShowDebugLogWindow(System.IntPtr p_open);
    [DllImport(LIB, CallingConvention = CallingConvention.Cdecl)]
    public static extern void ImGui_ShowIDStackToolWindowEx(System.IntPtr p_open);
    [DllImport(LIB, CallingConvention = CallingConvention.Cdecl)]
    public static extern void ImGui_ShowIDStackToolWindow();
    [DllImport(LIB, CallingConvention = CallingConvention.Cdecl)]
    public static extern void ImGui_ShowAboutWindow(System.IntPtr p_open);
    [DllImport(LIB, CallingConvention = CallingConvention.Cdecl)]
    public static extern void ImGui_ShowStyleEditor(System.IntPtr @ref);
    [DllImport(LIB, CallingConvention = CallingConvention.Cdecl)]
    [return: MarshalAs(UnmanagedType.I1)]
    public static extern bool ImGui_ShowStyleSelector([MarshalAs(UnmanagedType.LPUTF8Str)] string label);
    [DllImport(LIB, CallingConvention = CallingConvention.Cdecl)]
    public static extern void ImGui_ShowFontSelector([MarshalAs(UnmanagedType.LPUTF8Str)] string label);
    [DllImport(LIB, CallingConvention = CallingConvention.Cdecl)]
    public static extern void ImGui_ShowUserGuide();
    [DllImport(LIB, CallingConvention = CallingConvention.Cdecl)]
    public static extern System.IntPtr ImGui_GetVersion();
    [DllImport(LIB, CallingConvention = CallingConvention.Cdecl)]
    public static extern void ImGui_StyleColorsDark(System.IntPtr dst);
    [DllImport(LIB, CallingConvention = CallingConvention.Cdecl)]
    public static extern void ImGui_StyleColorsLight(System.IntPtr dst);
    [DllImport(LIB, CallingConvention = CallingConvention.Cdecl)]
    public static extern void ImGui_StyleColorsClassic(System.IntPtr dst);
    [DllImport(LIB, CallingConvention = CallingConvention.Cdecl)]
    [return: MarshalAs(UnmanagedType.I1)]
    public static extern bool ImGui_Begin([MarshalAs(UnmanagedType.LPUTF8Str)] string name, System.IntPtr p_open, int flags);
    [DllImport(LIB, CallingConvention = CallingConvention.Cdecl)]
    public static extern void ImGui_End();
    [DllImport(LIB, CallingConvention = CallingConvention.Cdecl)]
    [return: MarshalAs(UnmanagedType.I1)]
    public static extern bool ImGui_BeginChild([MarshalAs(UnmanagedType.LPUTF8Str)] string str_id, ImVec2 size, int child_flags, int window_flags);
    [DllImport(LIB, CallingConvention = CallingConvention.Cdecl)]
    [return: MarshalAs(UnmanagedType.I1)]
    public static extern bool ImGui_BeginChildID(uint id, ImVec2 size, int child_flags, int window_flags);
    [DllImport(LIB, CallingConvention = CallingConvention.Cdecl)]
    public static extern void ImGui_EndChild();
    [DllImport(LIB, CallingConvention = CallingConvention.Cdecl)]
    [return: MarshalAs(UnmanagedType.I1)]
    public static extern bool ImGui_IsWindowAppearing();
    [DllImport(LIB, CallingConvention = CallingConvention.Cdecl)]
    [return: MarshalAs(UnmanagedType.I1)]
    public static extern bool ImGui_IsWindowCollapsed();
    [DllImport(LIB, CallingConvention = CallingConvention.Cdecl)]
    [return: MarshalAs(UnmanagedType.I1)]
    public static extern bool ImGui_IsWindowFocused(int flags);
    [DllImport(LIB, CallingConvention = CallingConvention.Cdecl)]
    [return: MarshalAs(UnmanagedType.I1)]
    public static extern bool ImGui_IsWindowHovered(int flags);
    [DllImport(LIB, CallingConvention = CallingConvention.Cdecl)]
    public static extern System.IntPtr ImGui_GetWindowDrawList();
    [DllImport(LIB, CallingConvention = CallingConvention.Cdecl)]
    public static extern float ImGui_GetWindowDpiScale();
    [DllImport(LIB, CallingConvention = CallingConvention.Cdecl)]
    public static extern ImVec2 ImGui_GetWindowPos();
    [DllImport(LIB, CallingConvention = CallingConvention.Cdecl)]
    public static extern ImVec2 ImGui_GetWindowSize();
    [DllImport(LIB, CallingConvention = CallingConvention.Cdecl)]
    public static extern float ImGui_GetWindowWidth();
    [DllImport(LIB, CallingConvention = CallingConvention.Cdecl)]
    public static extern float ImGui_GetWindowHeight();
    [DllImport(LIB, CallingConvention = CallingConvention.Cdecl)]
    public static extern System.IntPtr ImGui_GetWindowViewport();
    [DllImport(LIB, CallingConvention = CallingConvention.Cdecl)]
    public static extern void ImGui_SetNextWindowPosEx(ImVec2 pos, int cond, ImVec2 pivot);
    [DllImport(LIB, CallingConvention = CallingConvention.Cdecl)]
    public static extern void ImGui_SetNextWindowPos(ImVec2 pos, int cond);
    [DllImport(LIB, CallingConvention = CallingConvention.Cdecl)]
    public static extern void ImGui_SetNextWindowSize(ImVec2 size, int cond);
    [DllImport(LIB, CallingConvention = CallingConvention.Cdecl)]
    public static extern void ImGui_SetNextWindowSizeConstraints(ImVec2 size_min, ImVec2 size_max, System.IntPtr custom_callback, System.IntPtr custom_callback_data);
    [DllImport(LIB, CallingConvention = CallingConvention.Cdecl)]
    public static extern void ImGui_SetNextWindowContentSize(ImVec2 size);
    [DllImport(LIB, CallingConvention = CallingConvention.Cdecl)]
    public static extern void ImGui_SetNextWindowCollapsed([MarshalAs(UnmanagedType.I1)] bool collapsed, int cond);
    [DllImport(LIB, CallingConvention = CallingConvention.Cdecl)]
    public static extern void ImGui_SetNextWindowFocus();
    [DllImport(LIB, CallingConvention = CallingConvention.Cdecl)]
    public static extern void ImGui_SetNextWindowScroll(ImVec2 scroll);
    [DllImport(LIB, CallingConvention = CallingConvention.Cdecl)]
    public static extern void ImGui_SetNextWindowBgAlpha(float alpha);
    [DllImport(LIB, CallingConvention = CallingConvention.Cdecl)]
    public static extern void ImGui_SetNextWindowViewport(uint viewport_id);
    [DllImport(LIB, CallingConvention = CallingConvention.Cdecl)]
    public static extern void ImGui_SetWindowPos(ImVec2 pos, int cond);
    [DllImport(LIB, CallingConvention = CallingConvention.Cdecl)]
    public static extern void ImGui_SetWindowSize(ImVec2 size, int cond);
    [DllImport(LIB, CallingConvention = CallingConvention.Cdecl)]
    public static extern void ImGui_SetWindowCollapsed([MarshalAs(UnmanagedType.I1)] bool collapsed, int cond);
    [DllImport(LIB, CallingConvention = CallingConvention.Cdecl)]
    public static extern void ImGui_SetWindowFocus();
    [DllImport(LIB, CallingConvention = CallingConvention.Cdecl)]
    public static extern void ImGui_SetWindowPosStr([MarshalAs(UnmanagedType.LPUTF8Str)] string name, ImVec2 pos, int cond);
    [DllImport(LIB, CallingConvention = CallingConvention.Cdecl)]
    public static extern void ImGui_SetWindowSizeStr([MarshalAs(UnmanagedType.LPUTF8Str)] string name, ImVec2 size, int cond);
    [DllImport(LIB, CallingConvention = CallingConvention.Cdecl)]
    public static extern void ImGui_SetWindowCollapsedStr([MarshalAs(UnmanagedType.LPUTF8Str)] string name, [MarshalAs(UnmanagedType.I1)] bool collapsed, int cond);
    [DllImport(LIB, CallingConvention = CallingConvention.Cdecl)]
    public static extern void ImGui_SetWindowFocusStr([MarshalAs(UnmanagedType.LPUTF8Str)] string name);
    [DllImport(LIB, CallingConvention = CallingConvention.Cdecl)]
    public static extern float ImGui_GetScrollX();
    [DllImport(LIB, CallingConvention = CallingConvention.Cdecl)]
    public static extern float ImGui_GetScrollY();
    [DllImport(LIB, CallingConvention = CallingConvention.Cdecl)]
    public static extern void ImGui_SetScrollX(float scroll_x);
    [DllImport(LIB, CallingConvention = CallingConvention.Cdecl)]
    public static extern void ImGui_SetScrollY(float scroll_y);
    [DllImport(LIB, CallingConvention = CallingConvention.Cdecl)]
    public static extern float ImGui_GetScrollMaxX();
    [DllImport(LIB, CallingConvention = CallingConvention.Cdecl)]
    public static extern float ImGui_GetScrollMaxY();
    [DllImport(LIB, CallingConvention = CallingConvention.Cdecl)]
    public static extern void ImGui_SetScrollHereX(float center_x_ratio);
    [DllImport(LIB, CallingConvention = CallingConvention.Cdecl)]
    public static extern void ImGui_SetScrollHereY(float center_y_ratio);
    [DllImport(LIB, CallingConvention = CallingConvention.Cdecl)]
    public static extern void ImGui_SetScrollFromPosX(float local_x, float center_x_ratio);
    [DllImport(LIB, CallingConvention = CallingConvention.Cdecl)]
    public static extern void ImGui_SetScrollFromPosY(float local_y, float center_y_ratio);
    [DllImport(LIB, CallingConvention = CallingConvention.Cdecl)]
    public static extern void ImGui_PushFontFloat(System.IntPtr font, float font_size_base_unscaled);
    [DllImport(LIB, CallingConvention = CallingConvention.Cdecl)]
    public static extern void ImGui_PopFont();
    [DllImport(LIB, CallingConvention = CallingConvention.Cdecl)]
    public static extern System.IntPtr ImGui_GetFont();
    [DllImport(LIB, CallingConvention = CallingConvention.Cdecl)]
    public static extern float ImGui_GetFontSize();
    [DllImport(LIB, CallingConvention = CallingConvention.Cdecl)]
    public static extern System.IntPtr ImGui_GetFontBaked();
    [DllImport(LIB, CallingConvention = CallingConvention.Cdecl)]
    public static extern void ImGui_PushStyleColor(int idx, uint col);
    [DllImport(LIB, CallingConvention = CallingConvention.Cdecl)]
    public static extern void ImGui_PushStyleColorImVec4(int idx, ImVec4 col);
    [DllImport(LIB, CallingConvention = CallingConvention.Cdecl)]
    public static extern void ImGui_PopStyleColorEx(int count);
    [DllImport(LIB, CallingConvention = CallingConvention.Cdecl)]
    public static extern void ImGui_PopStyleColor();
    [DllImport(LIB, CallingConvention = CallingConvention.Cdecl)]
    public static extern void ImGui_PushStyleVar(int idx, float val);
    [DllImport(LIB, CallingConvention = CallingConvention.Cdecl)]
    public static extern void ImGui_PushStyleVarImVec2(int idx, ImVec2 val);
    [DllImport(LIB, CallingConvention = CallingConvention.Cdecl)]
    public static extern void ImGui_PushStyleVarX(int idx, float val_x);
